# SelfTaughtSoftwareEngineering

./: .gitignore  README.md  example_json.json  json_parser.cpp  json_parser_AI.cpp
COPL/: COPL.c  vm.h
COPL/Scanner/: COPL.c  common.h  memory.h  object.h
includes/: calculator.hpp  my_vector.hpp
notlar/: constexpr.md  giris.md  integral_constant.md  ÖNEMLİ_Teorik_Temeller.md  ÖNEMLİ_temeller.md
src/: data_types.cpp  functions.cpp  my_vector_test.cpp  stack_vs_heap.cpp
src/StudentManagement/: CMakeLists.txt  main.cpp  studentManager.cpp  students.cpp  students.json
src/StudentManagement/includes/: studentManager.hpp  students.hpp
src/StudentManagement/tests/: test_student.cpp
src/calculator/: calculator.cpp  main.cpp
src/hashmap/: hashmap.hpp  main.cpp
